[tool.poetry]
name = "bioinformatics-institute-python-course"
version = "0.1.0"
description = ""
authors = ["idilettant <dedenev1985@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
